[build-system]
build-backend = "setuptools.build_meta"
requires = [ "setuptools>=45", "setuptools_scm[toml]>=6.2",]

[project]
classifiers = [ "Development Status :: 5 - Production/Stable", "Natural Language :: English", "Programming Language :: Python :: 3",]
description = "LCLS PyDM Widget Library"
dynamic = [ "version", "readme" ]
keywords = []
name = "pcdswidgets"
requires-python = ">=3.12"
dependencies = [
    "pydm>=1.9.0",
    "pyqt5>=5.15.11",
    "qtpy>=2.4.3",
]

[[project.authors]]
name = "SLAC National Accelerator Laboratory"

[options]
zip_safe = false
include_package_data = true

[project.license]
file = "LICENSE.md"

[tool.setuptools_scm]
write_to = "pcdswidgets/_version.py"

[project.entry-points."pydm.widget"]
ApertureValve = "pcdswidgets.vacuum.valves:ApertureValve"
ColdCathodeGauge = "pcdswidgets.vacuum.gauges:ColdCathodeGauge"
ControlOnlyValveNC = "pcdswidgets.vacuum.valves:ControlOnlyValveNC"
ControlOnlyValveNO = "pcdswidgets.vacuum.valves:ControlOnlyValveNO"
ControlValve = "pcdswidgets.vacuum.valves:ControlValve"
EPSByteIndicator = "pcdswidgets.eps_byteindicator:EPSByteIndicator"
FastShutter = "pcdswidgets.vacuum.valves:FastShutter"
FilterSortWidgetTable = "pcdswidgets.table:FilterSortWidgetTable"
GetterPump = "pcdswidgets.vacuum.pumps:GetterPump"
HotCathodeGauge = "pcdswidgets.vacuum.gauges:HotCathodeGauge"
IonPump = "pcdswidgets.vacuum.pumps:IonPump"
NeedleValve = "pcdswidgets.vacuum.valves:NeedleValve"
PneumaticValve = "pcdswidgets.vacuum.valves:PneumaticValve"
PneumaticValveDA = "pcdswidgets.vacuum.valves:PneumaticValveDA"
PneumaticValveNO = "pcdswidgets.vacuum.valves:PneumaticValveNO"
ProportionalValve = "pcdswidgets.vacuum.valves:ProportionalValve"
RGA = "pcdswidgets.vacuum.others:RGA"
RightAngleManualValve = "pcdswidgets.vacuum.valves:RightAngleManualValve"
RoughGauge = "pcdswidgets.vacuum.gauges:RoughGauge"
ScrollPump = "pcdswidgets.vacuum.pumps:ScrollPump"
TurboPump = "pcdswidgets.vacuum.pumps:TurboPump"

[project.optional-dependencies]
docs = [
    "docs-versions-menu>=0.5.2",
    "sphinx>=9.1.0",
    "sphinx-rtd-theme>=3.1.0",
    "sphinxcontrib-jquery>=4.1",
]
test = [
    "pytest>=9.0.2",
    "pytest-qt>=4.5.0",
    "pytest-timeout>=2.4.0",
]

[tool.setuptools.packages.find]
where = [ ".",]
include = [ "pcdswidgets*",]
namespaces = false

[tool.setuptools.dynamic.readme]
file = "README.md"
content-type = "text/markdown"


[tool.ruff]
line-length = 88
exclude = [".git", "__pycache__", "build", "dist", "pcdswidgets/_version.py"]

[tool.ruff.lint]
select = ["C", "E", "F", "W", "B", "I"]

[tool.ruff.lint.pydocstyle]
convention = "numpy"
