[build-system]
build-backend = "setuptools.build_meta"
requires = [ "setuptools>=45", "setuptools_scm[toml]>=6.2" ]

[project]
classifiers = [ "Development Status :: 5 - Production/Stable", "Natural Language :: English", "Programming Language :: Python :: 3",]
description = "LCLS PyDM Widget Library"
dynamic = [ "version", "readme" ]
keywords = []
name = "pcdswidgets"
requires-python = ">=3.12"
dependencies = [
    "pydm>=1.9.0",
    "qtpy>=2.4.3",
]

[[project.authors]]
name = "SLAC National Accelerator Laboratory"

[options]
zip_safe = false
include_package_data = true

[project.license]
file = "LICENSE.md"

[tool.setuptools_scm]
write_to = "pcdswidgets/_version.py"

[project.entry-points."pydm.widget"]
ApertureValve = "pcdswidgets.vacuum.valves:ApertureValve"
CapacitanceManometerGauge = "pcdswidgets.vacuum.gauges:CapacitanceManometerGauge"
ColdCathodeComboGauge = "pcdswidgets.vacuum.gauges:ColdCathodeComboGauge"
ColdCathodeGauge = "pcdswidgets.vacuum.gauges:ColdCathodeGauge"
ControlOnlyValveNC = "pcdswidgets.vacuum.valves:ControlOnlyValveNC"
ControlOnlyValveNO = "pcdswidgets.vacuum.valves:ControlOnlyValveNO"
ControlValve = "pcdswidgets.vacuum.valves:ControlValve"
EPSByteIndicator = "pcdswidgets.eps_byteindicator:EPSByteIndicator"
FastShutter = "pcdswidgets.vacuum.valves:FastShutter"
FilterSortWidgetTable = "pcdswidgets.table:FilterSortWidgetTable"
GetterPump = "pcdswidgets.vacuum.pumps:GetterPump"
HotCathodeComboGauge = "pcdswidgets.vacuum.gauges:HotCathodeComboGauge"
HotCathodeGauge = "pcdswidgets.vacuum.gauges:HotCathodeGauge"
IonPump = "pcdswidgets.vacuum.pumps:IonPump"
MotorClassicFull = "pcdswidgets.motion.common.motor_classic_full:MotorClassicFull"
MotorClassicRow = "pcdswidgets.motion.common.motor_classic_row:MotorClassicRow"
MotorTcClassicRow = "pcdswidgets.motion.common.motor_tc_classic_row:MotorTcClassicRow"
NeedleValve = "pcdswidgets.vacuum.valves:NeedleValve"
PneumaticValve = "pcdswidgets.vacuum.valves:PneumaticValve"
PneumaticValveDA = "pcdswidgets.vacuum.valves:PneumaticValveDA"
PneumaticValveNO = "pcdswidgets.vacuum.valves:PneumaticValveNO"
ProportionalValve = "pcdswidgets.vacuum.valves:ProportionalValve"
RGA = "pcdswidgets.vacuum.others:RGA"
RightAngleManualValve = "pcdswidgets.vacuum.valves:RightAngleManualValve"
RoughGauge = "pcdswidgets.vacuum.gauges:RoughGauge"
ScrollPump = "pcdswidgets.vacuum.pumps:ScrollPump"
SmarActOpenLoopContextDoubleDisplay = "pcdswidgets.motion.smaract.smaract_open_loop_context_double:SmarActOpenLoopContextDoubleDisplay"
SmaractOpenLoopClassicRow = "pcdswidgets.motion.smaract.smaract_open_loop_classic_row:SmaractOpenLoopClassicRow"
SmaractOpenLoopContextDouble = "pcdswidgets.motion.smaract.smaract_open_loop_context_double:SmaractOpenLoopContextDouble"
SmaractTipTiltDouble = "pcdswidgets.motion.smaract.smaract_tip_tilt_double:SmaractTipTiltDouble"
SmaractTipTiltFull = "pcdswidgets.motion.smaract.smaract_tip_tilt_full:SmaractTipTiltFull"
TurboPump = "pcdswidgets.vacuum.pumps:TurboPump"

[project.optional-dependencies]
dev = [
    "jinja2>=3",
    "ruff>=0.15.8",
    "tomlkit>=0.14.0",
]
doc = [
    "docs-versions-menu>=0.5.2",
    "sphinx>=9.1.0",
    "sphinx-rtd-theme>=3.1.0",
    "sphinxcontrib-jquery>=4.1",
]
test = [
    "jinja2>=3",
    "pytest>=9.0.2",
    "pytest-qt>=4.5.0",
    "pytest-timeout>=2.4.0",
    "tomlkit>=0.14.0",
]

[tool.setuptools.packages.find]
where = [ ".",]
include = [ "pcdswidgets*",]
namespaces = false

[tool.setuptools.dynamic.readme]
file = "README.md"
content-type = "text/markdown"

[tool.ruff]
line-length = 120
exclude = [".git", "__pycache__", "build", "dist", "*/_version.py"]

[tool.ruff.lint]
select = ["C", "E", "F", "W", "B", "I"]

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.pyright.defineConstant]
PYQT5 = true
PYSIDE2 = false
PYQT6 = false
PYSIDE6 = false

[tool.uv]
exclude-newer = "7 days"
